Stop the top of diffs in the stage view from being cut off

--- a/html/views/commit/commit.css
+++ b/html/views/commit/commit.css
@@ -1,7 +1,7 @@
 body {
 	padding: 0px;
 	margin: 0px;
-	margin-top: 20px;
+	margin-top: 30px;
 }
 
 #title {
